# altpaint

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  altpaint-project.altp.json  canvas-templates.json  myfirstudachan.json  workspace-presets.json
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.context/: impl-status-diff-2026-03-13.md  profile-log.txt  task_sut_reverse_engineering.md  text-flow-design.md
apps/desktop/: ARCH_GREP.md  Cargo.toml  altpaint-project.altp.json  build.rs  canvas-templates.json  workspace-presets.json
apps/desktop/src/: canvas_bridge.rs  config.rs  dialogs.rs  frame.rs  main.rs  pens.rs  profiler.rs  runtime.rs  session.rs  wgpu_canvas.rs
apps/desktop/src/app/: background_tasks.rs  bootstrap.rs  canvas_frame.rs  command_router.rs  commands.rs  cursor.rs  drawing.rs  input.rs  io_state.rs  mod.rs  panel_config_sync.rs  panel_dispatch.rs  present.rs  present_state.rs  services.rs  snapshot_store.rs  state.rs
apps/desktop/src/app/services/: export.rs  gpu_sync.rs  mod.rs  project_io.rs  snapshot.rs  text_render.rs  tool_catalog.rs  workspace_io.rs  workspace_layout.rs
apps/desktop/src/app/tests/: bootstrap_tests.rs  command_router_tests.rs  commands.rs  gpu_tests.rs  interaction.rs  mod.rs  panel_dispatch_tests.rs  persistence.rs  service_dispatch_tests.rs
apps/desktop/src/frame/: compositor.rs  geometry.rs  mod.rs  overlay_quad.rs  raster.rs  solid_quad.rs  status_panel.rs  tests.rs
apps/desktop/src/runtime/: keyboard.rs  pointer.rs  tests.rs
apps/desktop/ui/: app-window.slint  phase6-sample.wat
apps/desktop/ui/panels/app-actions/: Cargo.toml
apps/desktop/ui/panels/color-palette/: Cargo.toml  panel.altp-panel
apps/desktop/ui/panels/job-progress/: Cargo.toml
apps/desktop/ui/panels/layers-panel/: Cargo.toml
apps/desktop/ui/panels/snapshot-panel/: Cargo.toml
apps/desktop/ui/panels/tool-palette/: Cargo.toml
apps/desktop/ui/panels/tool-palette/src/: lib.rs
crates/app-core/: Cargo.toml
crates/builtin-panels/: Cargo.toml
crates/builtin-panels/panel-list/: Cargo.toml  panel.css  panel.html  panel.meta.json
crates/builtin-panels/panel-list/src/: lib.rs
crates/builtin-panels/tool-palette/: Cargo.toml  panel.css  panel.html  panel.meta.json
crates/builtin-panels/tool-palette/src/: lib.rs
crates/builtin-panels/workspace-layout/: Cargo.toml  panel.css  panel.html  panel.meta.json
crates/builtin-panels/workspace-layout/src/: lib.rs
crates/builtin-plugins/: Cargo.toml
crates/canvas/: Cargo.toml
crates/desktop-support/: Cargo.toml
crates/gpu-canvas/: Cargo.toml
crates/panel-api/: Cargo.toml
crates/panel-dsl/: Cargo.toml
crates/panel-html-experiment/: Cargo.toml
crates/panel-html-experiment/src/: action.rs  binding.rs  engine.rs  gpu.rs  lib.rs
crates/panel-macros/: Cargo.toml
crates/panel-runtime/: Cargo.toml
crates/panel-runtime/src/: builtin_plugin.rs  commands.rs  config.rs  dsl_loader.rs  dsl_panel.rs  dsl_to_html.rs  host_sync.rs  html_panel.rs  lib.rs  meta.rs  registry.rs  tests.rs
crates/panel-schema/: Cargo.toml
crates/panel-sdk/: Cargo.toml
crates/plugin-api/: Cargo.toml
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: dom_api.rs  lib.rs
crates/plugin-host/tests/: dom_api.rs
crates/plugin-macros/: Cargo.toml
crates/plugin-sdk/: Cargo.toml
crates/render/: Cargo.toml
crates/render-types/: Cargo.toml
crates/render-types/src/: brush_preview.rs  canvas_plan.rs  canvas_scene.rs  dirty.rs  frame_plan.rs  lib.rs  overlay_plan.rs  panel_plan.rs  test_support.rs
crates/render-types/src/tests/: canvas_scene_tests.rs  mod.rs  overlay_plan_tests.rs
crates/render/src/: brush_preview.rs  canvas_plan.rs  compose.rs  dirty.rs  frame_plan.rs  layer_group.rs  lib.rs  overlay_plan.rs  panel.rs  panel_plan.rs  status.rs  text.rs
crates/render/src/tests/: dirty_tests.rs  frame_plan_tests.rs  layer_group_tests.rs  mod.rs  overlay_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: export.rs  lib.rs  pen_exchange.rs  pen_format.rs  pen_presets.rs  project_file.rs  project_sqlite.rs  tool_catalog.rs
crates/ui-shell/: Cargo.toml
crates/ui-shell/src/: dsl.rs  focus.rs  lib.rs  presentation.rs  surface_render.rs  tests.rs  text.rs  tree_query.rs  workspace.rs
crates/workspace-persistence/: Cargo.toml
docs/: ARCHITECTURE.md  CURRENT_ARCHITECTURE.md  IMPLEMENTATION_OPERATIONS.md  IMPLEMENTATION_STATUS.md  MODULE_DEPENDENCIES.md  PANEL_DSL.md  PEN_PRESETS.md  PLUGIN_DEVELOPMENT.md  RENDERING-ENGINE.md  ROADMAP.md  SKETCH.md  feature.md  memo.md  rustdoc-index.html
docs/adr/: 001-undo-redo-replay-history.md  002-export-png-background-job.md  003-gpu-canvas-migration.md  004-color-palette-multimode-colorspace.md  005-gpu-canvas-phase-8d-communication-minimization.md  006-gpu-fill-composite-and-blendmode-custom-removal.md  007-html-panel-experiment.md  008-html-panel-dynamic-size-and-engine-consolidation.md  009-dsl-panel-html-translation.md  010-render-crate-removal.md  011-html-panel-feature-removal.md  012-altp-panel-dsl-removal.md  013-html-panel-manual-resize.md  014-paneltree-removal-and-workspace-layout-html.md
docs/builtin-plugins/: PLUGIN_DEVELOPMENT.md  README.md  app-actions.md  color-palette.md  job-progress.md  layers-panel.md  pen-settings.md  snapshot-panel.md  tool-palette.md
docs/panel-ui-definition/: README.md  ui-dsl.md  wasm-runtime.md
docs/tmp/: MODULE_DEPENDENCIES.md  architecture-gap-2026-03-10.md  gpu-migration-plan-phase8.md  input-flow-paint-pan-panel-move-2026-03-11.md  memo.md  panel-surface-dirty-root-cause-2026-03-10.md  phase9-render-crate-removal-plan.md  refactor_context.md  roadmap-implementation-operations-2026-03-11.md  (+5 more)
pens/: README.md  broad-marker.altp-pen.json  fine-liner.altp-pen.json  round-pen.altp-pen.json
plugins/: README.md
scripts/: auto-pull-review-merge-my-ideas.ps1  auto-pull-review-merge-my-ideas.sh  build-ui-wasm.ps1  build-ui-wasm.sh  measure-startup.ps1  profile-canvas.ps1  profile-panels.ps1  profile-render.ps1
tests/: blackbox-testsheet.html
tools/: rewrite_rust_function_docs.py
(+205 files in other folders)
