[workspace]
members = [
  "crates/app-core",
  "crates/panel-dsl",
  "crates/panel-schema",
  "crates/panel-sdk",
  "crates/plugin-host",
  "crates/render",
  "crates/storage",
  "crates/ui-shell",
  "crates/plugin-api",
  "apps/desktop",
  "apps/desktop/ui/panels/*",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Naoto"]

[workspace.dependencies]
ab_glyph = "0.2"
anyhow = "1.0"
font8x8 = "0.3"
fontdb = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
winit = "0.30"
pixels = "0.15"
wgpu = "28.0"
pollster = "0.4"
