[workspace]
members = [
  # Planned during the roadmap refactor:
  # - crates/canvas
  # - crates/panel-runtime
  "crates/app-core",
  "crates/desktop-support",
  "crates/panel-dsl",
  "crates/panel-macros",
  "crates/panel-schema",
  "crates/panel-sdk",
  "crates/plugin-host",
  "crates/render",
  "crates/storage",
  "crates/ui-shell",
  "crates/workspace-persistence",
  "crates/plugin-api",
  "apps/desktop",
  "plugins/app-actions",
  "plugins/workspace-presets",
  "plugins/tool-palette",
  "plugins/view-controls",
  "plugins/panel-list",
  "plugins/layers-panel",
  "plugins/color-palette",
  "plugins/pen-settings",
  "plugins/job-progress",
  "plugins/snapshot-panel",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Naoto"]

[workspace.dependencies]
ab_glyph = "0.2"
anyhow = "1.0"
font8x8 = "0.3"
fontdb = "0.23"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinyfiledialogs = "3.9"
thiserror = "2.0"
winit = "0.30"
pixels = "0.15"
wgpu = "28.0"
pollster = "0.4"
