[workspace]
members = [
  "crates/builtin-panels",
  "crates/builtin-panels/view-controls",
  "crates/builtin-panels/job-progress",
  "crates/builtin-panels/panel-list",
  "crates/builtin-panels/snapshot-panel",
  "crates/builtin-panels/workspace-presets",
  "crates/builtin-panels/app-actions",
  "crates/builtin-panels/text-flow",
  "crates/builtin-panels/tool-palette",
  "crates/builtin-panels/pen-settings",
  "crates/builtin-panels/layers-panel",
  "crates/builtin-panels/color-palette",
  "crates/panel-api",
  "crates/canvas",
  "crates/app-core",
  "crates/desktop-support",
  "crates/panel-runtime",
  "crates/panel-schema",
  "crates/plugin-macros",
  "crates/plugin-sdk",
  "crates/plugin-host",
  "crates/gpu-canvas",
  "crates/panel-html-experiment",
  "crates/render-types",
  "crates/storage",
  "crates/ui-shell",
  "crates/workspace-persistence",
  "apps/desktop",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Naoto"]

[workspace.dependencies]
ab_glyph = "0.2"
anyhow = "1.0"
font8x8 = "0.3"
fontdb = "0.23"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinyfiledialogs = "3.9"
thiserror = "2.0"
winit = "0.30"
pixels = "0.15"
wgpu = "28.0"
pollster = "0.4"
