[package]
name = "desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
app-core = { path = "../../crates/app-core" }
gpu-canvas = { path = "../../crates/gpu-canvas" }
canvas = { path = "../../crates/canvas" }
desktop-support = { path = "../../crates/desktop-support" }
panel-api = { path = "../../crates/panel-api" }
panel-runtime = { path = "../../crates/panel-runtime" }
panel-html-experiment = { path = "../../crates/panel-html-experiment", optional = true }
keyboard-types = { version = "0.7", optional = true }
pollster.workspace = true
render = { path = "../../crates/render" }
serde_json.workspace = true
storage = { path = "../../crates/storage" }
ui-shell = { path = "../../crates/ui-shell" }
workspace-persistence = { path = "../../crates/workspace-persistence" }
wgpu.workspace = true
winit.workspace = true

[features]
html-panel = ["panel-runtime/html-panel", "dep:panel-html-experiment", "dep:keyboard-types"]

[dev-dependencies]
