[package]
name = "panel-html-experiment"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "HTML/CSS-based panel rendering using Blitz on a shared wgpu/vello GPU pipeline"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Blitz rendering engine (DioxusLabs). 0.3-alpha series for wgpu 28 / vello 0.8 compatibility.
blitz-dom    = { version = "0.3.0-alpha", default-features = false }
blitz-html   = "0.3.0-alpha"
blitz-paint  = "0.3.0-alpha"
blitz-traits = "0.3.0-alpha"
anyrender         = "0.8"
anyrender_vello   = "0.8"
vello             = "0.8"
wgpu              = { workspace = true }
tracing           = "0.1"

[dev-dependencies]
pollster = { workspace = true }
