[package]
name = "panel-html-experiment"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "HTML/CSS-based panel rendering using Blitz on a shared wgpu/vello GPU pipeline"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Blitz rendering engine (DioxusLabs). 0.3-alpha series for wgpu 28 / vello 0.8 compatibility.
blitz-dom    = { version = "0.3.0-alpha", default-features = false, features = ["system_fonts"] }
blitz-html   = "0.3.0-alpha"
blitz-paint  = "0.3.0-alpha"
blitz-traits = "0.3.0-alpha"
# taffy は blitz-dom が同バージョンを使う。Phase 11: root 要素の min/max-size を
# CSS から取り出すため Dimension への直接アクセスが必要。
taffy        = { version = "0.10.1", default-features = false, features = ["std", "grid"] }
anyrender         = "0.8"
anyrender_vello   = "0.8"
vello             = "0.8"
wgpu              = { workspace = true }
tracing           = "0.1"

[dev-dependencies]
pollster = { workspace = true }
keyboard-types = "0.7"
