[package]
name = "panel-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
app-core = { path = "../app-core" }
panel-api = { path = "../panel-api" }
panel-schema = { path = "../panel-schema" }
plugin-host = { path = "../plugin-host" }
panel-html-experiment = { path = "../panel-html-experiment" }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
pollster = { workspace = true }
keyboard-types = "0.7"
