[package]
name = "plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
panel-schema = { path = "../panel-schema" }
serde_json.workspace = true
thiserror.workspace = true
wasmtime = { version = "30.0", features = ["cache"] }
