[package]
name = "render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ab_glyph.workspace = true
app-core = { path = "../app-core" }
desktop-support = { path = "../desktop-support" }
font8x8.workspace = true
fontdb.workspace = true
plugin-api = { path = "../plugin-api" }
