[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
app-core = { path = "../app-core" }
anyhow.workspace = true
rmp-serde = "1.3"
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
workspace-persistence = { path = "../workspace-persistence" }
zstd = "0.13"
