[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
app-core = { path = "../app-core" }
anyhow.workspace = true
base64 = "0.22"
rmp-serde = "1.3"
rusqlite = { version = "0.33", features = ["bundled"] }
serde.workspace = true
serde_json = "1.0"
sha2 = "0.10"
thiserror.workspace = true
workspace-persistence = { path = "../workspace-persistence" }
zstd = "0.13"
png = "0.17"
