[package]
name = "ui-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ab_glyph.workspace = true
app-core = { path = "../app-core" }
font8x8.workspace = true
fontdb.workspace = true
panel-dsl = { path = "../panel-dsl" }
panel-schema = { path = "../panel-schema" }
plugin-host = { path = "../plugin-host" }
plugin-api = { path = "../plugin-api" }
render = { path = "../render" }
serde_json.workspace = true
