[package]
name = "ui-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ab_glyph.workspace = true
app-core = { path = "../app-core" }
font8x8.workspace = true
fontdb.workspace = true
panel-api = { path = "../panel-api" }
panel-runtime = { path = "../panel-runtime" }
render = { path = "../render" }
