[package]
name = "ui-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
app-core = { path = "../app-core" }
panel-api = { path = "../panel-api" }
panel-runtime = { path = "../panel-runtime" }
render = { path = "../render" }
render-types = { path = "../render-types" }
