[package]
name = "builtin-panel-panel-list"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
plugin-sdk = { path = "../../plugin-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
