[package]
name = "builtin-panel-workspace-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
plugin-sdk = { path = "../../plugin-sdk" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
